# haade_panel_s504

./: .gitignore  Dockerfile  README.md  l10n.yaml  pubspec.yaml  release.yml
.devcontainer/: devcontainer.json
.github/workflows/: flutter-android-release.yml  flutter.yml
android/: gradle.properties
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/elcapi/: BootReceiver.java
android/app/src/main/kotlin/com/example/haade_panel_s504/: AppForegroundService.kt  BootReceiver.kt  BootService.kt  CallIO.kt  LightSensorService.kt  MainActivity.kt  SensorTH.kt  SwitchRelay.kt  SystemPropertiesProxy.kt  VirtualTerminal.kt  ledlight.kt
android/app/src/main/kotlin/com/example/mqtt_hatab/: AppForegroundService.kt  BootReceiver.java  BootReceiver.kt  BootService.kt  CallIO.kt  LightSensorService.kt  MainActivity.kt  SensorTH.kt  SwitchIO.kt  SwitchRelay.kt  SystemPropertiesProxy.kt  VirtualTerminal.kt  ledlight.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  mqtt_service.dart
lib/l10n/: app_en.arb  app_fr.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_fr.dart
lib/pages/: home_page.dart  io_page.dart  led_control_page.dart  mqtt_debug_page.dart  mqtt_settings_page.dart  parameter_information.dart  sensor_reader_page.dart  settings_page.dart  switch_relay_page.dart
lib/services/: app_localizations_helper.dart  (+9 more)
linux/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+8 files in other folders)
